--- a/src/app/(frontend)/components/TextMediaTiles.module.css
+++ b/src/app/(frontend)/components/TextMediaTiles.module.css
@@ -143,7 +143,7 @@
   .container {
     flex-direction: column;
     align-items: center;
-    gap: 24px;
+    gap: 24px !important;
     height: auto;
   }
 
